# NGNEON-EMU

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NEO_FORMAT_ANALYSIS.md  README.md  SKILL.md  analyze_bmp.ps1  configurar-ngneon.bat  implementation_plan.md  package_ngneon_release.bat  r68k_limitacion.md
config/: ngneon.conf  ngneon.example.conf
configurator/: README.md  index.html  package.json  server.mjs
configurator/src/: main.ts  styles.css
core-emulator/: Cargo.toml  build.rs
core-emulator/geolith_ymfm/: ng_ymfm_bridge.c
core-emulator/musashi/: m68kconf.h  m68kcpu.c  m68kmame.h  musashi_stubs.c
core-emulator/musashi/softfloat/: milieu.h  softfloat.h
core-emulator/src/: audio.rs  bios.rs  cmc.rs  cmc_gfx_tables.rs  cpu.rs  demo.rs  lib.rs  memory.rs  musashi_ffi.rs  pcm2.rs  rcheevos_ffi.rs  retroachievements.rs  rom.rs  savestate.rs  screenshot.rs  sma.rs  video.rs  ym2610.rs  z80.rs
examples/: ngneon_test.neo
frontend/: Cargo.toml  build.rs
frontend/assets/: ngneon_icon.rc
frontend/benches/: resampler_bench.rs
frontend/config/: ngneon.conf
frontend/saves/: Art_of_Fighting.sav
frontend/src/: audio.rs  gamepad.rs  gl_render.rs  input.rs  lang.rs  lib.rs  main.rs  screenshot.rs  ui.rs
frontend/src/shaders/: crt.glsl
